2005-07-08  Matt Johnston  <matt@ucc.asn.au>

	* file_io.cc (ident_existing_file): new function to calculate
	the ident of a file failing gracefully if it doesn't exist
	or is a directory.
	* file_io.hh (classify_manifest_paths,
	build_restricted_manifest_map): use ident_existing_file
	* ui.cc: cast to avoid compiler warnings

2005-07-07  Nathaniel Smith  <njs@pobox.com>

	* contrib/ciabot_monotone.py (Monotone.log): Fix to work with
	0.20.

2005-07-07  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (monotone_CPPFLAGS, unit_tests_CPPFLAGS): Add
	-DBOOST_REGEX_V4_CHAR_REGEX_TRAITS_HPP to work around g++
	4.0/boost 1.32.0 lossage.

2005-07-07  Vaclav Haisman  <V.Haisman@sh.cvut.cz>

	* Makefile.am: Compile fix for FreeBSD.

2005-07-07  Nathaniel Smith  <njs@pobox.com>

	* netsync.cc (process_hello_cmd, process_anonymous_cmd) 
	(process_auth_cmd): Change permission checking -- always build
	merkle tree (even when a pure sink), send permission denied and
	abort whenever client tries to read/write a branch they don't have
	access to.

2005-07-07  Nathaniel Smith  <njs@pobox.com>

	* ChangeLog: fixup formatting.

2005-07-06  Matt Johnston  <matt@ucc.asn.au>

	* database.cc (assert_sqlite3_ok): database corruption and similar
	problems are errors, not invariants.

2005-07-06  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (push, pull, sync): Fix --help description.	
	
2005-07-06  Nathaniel Smith  <njs@pobox.com>

	* options.hh (OPT_SET_DEFAULT): 
	* app_state.{hh,cc} (app_state::set_default):
	* monotone.cc (coptions, cpp_main): New option.
	* commands.cc (pull, push, sync): Accept it.
	(process_netsync_args): Use it.
	* tests/t_set_default.at, testsuite.at: New test.

2005-07-07  Matthew Gregan  <kinetik@orcon.net.nz>

	* win32/monotone.iss: Bump version number.

2005-07-05  Nathaniel Smith  <njs@pobox.com>

	* debian/rules (config.status): Use bundled sqlite.
	* debian/control (Build-Depends): Remove popt and sqlite.

2005-07-05  Nathaniel Smith  <njs@pobox.com>
